<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.githubtrendingrepos.GithubTrendingReposFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_search_trending_repos"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="2dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:ignore="TouchTargetSizeCheck">

            <EditText
                android:id="@+id/et_search_trending_repos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:hint="@string/search_repositories"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_search_trending_repos"
                app:layout_constraintStart_toEndOf="@+id/iv_search_clear_trending_repos"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/iv_search_clear_trending_repos"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:clickable="true"
                android:contentDescription="@string/clear"
                android:focusable="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_search_trending_repos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/iv_search_trending_repos"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/search"
                android:scaleType="centerInside"
                android:src="@drawable/ic_search"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btn_search_trending_repos"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minWidth="0dip"
                android:text="@string/search"
                android:textColor="@color/blue"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_btn_date_range_trending_repos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_title_trending_repos"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_last_day_trending_repos"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_day" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_last_week_trending_repos"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_week" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_last_year_trending_repos"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_year" />
    </com.google.android.material.button.MaterialButtonToggleGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_trending_repos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_title_trending_repos"
        tools:listitem="@layout/item_github_repo" />

    <TextView
        android:id="@+id/tv_filter_title_trending_repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/filter_by_date_range"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_search_trending_repos" />

    <TextView
        android:id="@+id/tv_list_title_trending_repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/github_trending_repositories"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggle_btn_date_range_trending_repos" />

</androidx.constraintlayout.widget.ConstraintLayout>