<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.githubfavouriterepos.GithubFavouriteReposFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:expanded="true"
        app:liftOnScrollTargetViewId="@+id/rv_favourite_repos">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_favourite_repos"
            style="@style/Widget.Material3.Toolbar.OnSurface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="snapMargins|scroll|enterAlways|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_search_favourite_repos"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="2dp"
                    app:cardCornerRadius="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        tools:ignore="TouchTargetSizeCheck">

                        <EditText
                            android:id="@+id/et_search_favourite_repos"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="24dp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:hint="@string/search_repositories"
                            android:imeOptions="actionSearch"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColorHint="@color/grey"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/btn_search_favourite_repos"
                            app:layout_constraintStart_toEndOf="@+id/iv_search_clear_favourite_repos"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="TouchTargetSizeCheck" />

                        <ImageView
                            android:id="@+id/iv_search_clear_favourite_repos"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:clickable="true"
                            android:contentDescription="@string/clear"
                            android:focusable="true"
                            android:paddingStart="16dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_clear"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/et_search_favourite_repos"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="TouchTargetSizeCheck" />

                        <ImageView
                            android:id="@+id/iv_search_favourite_repos"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="end"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/search"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_search"
                            android:visibility="visible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:visibility="visible" />

                        <Button
                            android:id="@+id/btn_search_favourite_repos"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:minWidth="0dip"
                            android:text="@string/search"
                            android:textColor="@color/blue"
                            android:visibility="invisible"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:visibility="gone" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_favourite_repos"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favourite_repos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_github_repo" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tv_no_data_favourite_repos"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="-8dp"
        android:gravity="center"
        android:text="Your favourites list is empty"
        android:textSize="16sp"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_no_data"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>